[package]
name = "just_localize_bro"
version = "0.1.0"
edition = "2024"

[dependencies]
faer = "0.24.4"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "full_palette", "line_series", "ttf"] }
rayon = "1.12.0"
rand = "0.9.5"
statrs = "0.18.0"
noise = "0.9"
